<resources>

    <string name="app_name">Check+</string>
    <string name="action_login">ENTRAR</string>
    <string name="copyright">© Copyright 2016 VERSALIUS</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="underlined_singup"><u>Cadastre-se</u></string>
    <string name="underlined_alter"><u>Alterar</u></string>

    <string name="underlined_checkin"><u>Check in</u></string>
    <string name="underlined_checkout"><u>Check out</u></string>
    <string name="underlined_send"><u>Enviar</u></string>
    <string name="dont_have_acc">Não possui uma conta?</string>

    <!--Titles-->
    <string name="title_signup">CADASTRO</string>
    <string name="title_update">ATUALIZAR</string>
    <string name="title_edit">Editar</string>
    <string name="title_profile">PERFIL</string>
    <string name="title_alter_password">ALTERAR SENHA</string>
    <string name="title_checkin">CHECK IN</string>
    <string name="title_checkout">CHECK OUT</string>

    <string name="title_forgot_password">ESQUECEU A SENHA</string>
    <string name="title_dialog_permission">Permissão requerida</string>
    <string name="title_crop_activity">Cortar Imagem</string>
    <string name="title_activity_home">Home</string>

    <!--Hints-->

    <string name="hint_service">Serviço</string>
    <string name="hint_city">Cidade</string>
    <string name="hint_city_required">Cidade *</string>
    <string name="hint_email">Email</string>
    <string name="hint_email_required">Email *</string>
    <string name="hint_old_password">Senha Antiga</string>
    <string name="hint_password">Senha</string>
    <string name="hint_old_password_required">Senha Antiga*</string>
    <string name="hint_password_required">Senha *</string>
    <string name="hint_full_name">Nome Completo *</string>
    <string name="hint_rg">RG *</string>
    <string name="hint_passport">Passaporte *</string>
    <string name="hint_shipping_agent">Orgão Expedidor *</string>
    <string name="hint_cpf">CPF *</string>
    <string name="hint_nationality">Nacionalidade</string>
    <string name="hint_profession">Profissão</string>
    <string name="hint_street">Rua *</string>
    <string name="hint_number">Número</string>
    <string name="hint_neighborhood">Bairro</string>
    <string name="hint_zip_code">CEP</string>
    <string name="hint_password_again">Repita a senha</string>
    <string name="hint_continent">Continente *</string>
    <string name="hint_country">País *</string>
    <string name="hint_state">Estado *</string>
    <string name="hint_birth_date">Data de nascimento *</string>
    <string name="hint_phone">Telefone *</string>
    <string name="hint_country_spinner">Selecione um país…</string>
    <string name="hint_state_spinner">Selecione um estado…</string>
    <string name="hint_city_spinner">Selecione uma cidade…</string>
    <string name="hint_check_in">Data e horário do check in</string>
    <string name="hint_check_out">Data e horário do check out</string>
    <string name="hint_booking_number">Número da reserva *</string>
    <string name="hint_observations">Observações..</string>
    <string name="hint_suggestions">Sugestões..</string>
    <string name="hint_amount">Qtd</string>

    <!--Labels-->

    <string name="lb_radio_male">Masculino</string>
    <string name="lb_radio_female">Feminino</string>
    <string name="lb_gender">Sexo *</string>
    <string name="lb_RG">RG</string>
    <string name="lb_passport">Passaporte</string>
    <string name="lb_identification">Documento de Identificação *</string>
    <string name="lb_check_in">Check in</string>
    <string name="lb_check_out">Check out</string>
    <string name="lb_vehicle_type">Tipo de veículo</string>
    <string name="lb_travel_motivation">Motivo da viagem</string>
    <string name="lb_arriving_from">Chegando de</string>
    <string name="lb_next_destination">Próximo Destino</string>
    <string name="lb_products_consumed">Produtos Consumidos</string>

    <!--Mensagens de erros-->

    <string name="err_msg_empty_name">Insira o nome completo</string>
    <string name="err_msg_empty_email">Insira um e-mail válido</string>
    <string name="err_msg_empty_old_password">Insira uma senha válida</string>
    <string name="err_msg_empty_identification">Insira o número do documento de identificação</string>
    <string name="err_msg_empty_shipping_agent">Insira o órgão expedidor</string>
    <string name="err_msg_empty_cpf">Insira o número do seu CPF</string>
    <string name="err_msg_empty_nationality">Insira a sua nacionalidade</string>
    <string name="err_msg_empty_profession">Insira a sua profissão</string>
    <string name="err_msg_empty_street">Insira o nome da sua rua</string>
    <string name="err_msg_empty_neighborhood">Insira o nome do seu bairro</string>
    <string name="err_msg_empty_zipcode">Insira o seu código postal</string>
    <string name="err_msg_empty_booking_number">Insira o seu número de reserva</string>

    <string name="err_msg_invalid_identification">Número do documento de identificação inválido</string>
    <string name="err_msg_invalid_cpf">Número do documento de identificação inválido</string>
    <string name="err_msg_invalid_name">Preencha seu nome corretamente</string>
    <string name="err_msg_invalid_profession">Preencha sua profissão corretamente</string>
    <string name="err_msg_invalid_nationality">Preencha sua nacionalidade corretamente</string>
    <string name="err_msg_invalid_shipping_agent">Orgão expedidor inválido</string>
    <string name="err_msg_invalid_email">Email inválido</string>
    <string name="err_msg_invalid_site">Site inválido</string>
    <string name="err_msg_invalid_facebook">Facebook inválido</string>
    <string name="err_msg_invalid_twitter">Twitter inválido</string>
    <string name="err_msg_invalid_birthday">Data de nascimento inválida</string>
    <string name="err_msg_invalid_phone">Número inválido</string>
    <string name="err_msg_invalid_booking_number">Número de reserva inválido</string>
    <string name="err_msg_invalid_quantity">Valor inválido</string>

    <string name="err_msg_must_select_one">Selecione uma opção</string>
    <string name="err_msg_must_select_city">Selecione uma cidade</string>
    <string name="err_msg_must_select_continent">Selecione um continente</string>
    <string name="err_msg_must_select_country">Selecione um país</string>
    <string name="err_msg_must_select_state">Selecione um estado</string>
    <string name="err_msg_must_select_product">Selecione um produto</string>

    <string name="err_msg_existing_email">Este email já está em uso</string>
    <string name="err_msg_password_invalid">Senha inválida</string>
    <string name="err_msg_no_existing_email">Este email não está cadastrado</string>
    <string name="err_msg_existing_cpf">Este CPF já está em uso</string>
    <string name="err_msg_city">Insira uma cidade</string>
    <string name="err_msg_short_password">A senha deve possuir de 6 a 22 caracteres</string>
    <string name="err_msg_dont_match_password">As senhas não são iguais</string>
    <string name="err_msg_server_fail">Houve uma falha. Tente novamente mais tarde.</string>

    <!-- Mensagens Caixas de Diálogo -->

    <string name="dialog_permission_agree_button">Ok</string>
    <string name="dialog_permission_disagree_button">Cancelar</string>

    <!-- Itens do drawer -->
    <string name="item_profile">Perfil</string>
    <string name="item_alter_password">Alterar Senha</string>
    <string name="item_delete_account">Excluir Conta</string>
    <string name="item_logout">Sair</string>

    <!--Arrays-->

    <!--Continent Array-->
    <string-array name="array_continents">
        <item>Selecione um continente…</item> <!-- Valor default -->
        <item>Africa</item>
        <item>Asia</item>
        <item>Europe</item>
        <item>North America</item>
        <item>South America</item>
    </string-array>
    <string-array name="array_continent_id">
        <item>0</item> <!-- Valor default -->
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!--Vehicle Array-->
    <string-array name="array_vehicles">
        <item>Selecione um veículo..</item> <!-- Valor default -->
        <item>Avião</item>
        <item>Ônibus</item>
        <item>Moto</item>
        <item>Navio</item>
        <item>Trem</item>
        <item>Outro</item>

    </string-array>
    <string-array name="array_vehicle_id">
        <item>0</item> <!-- Valor default -->
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <!--Travel Array-->
    <string-array name="array_travel">
        <item>Selecione um motivo..</item> <!-- Valor default -->
        <item>Lazer</item>
        <item>Negócios</item>
        <item>Congresso</item>
        <item>Parentes</item>
        <item>Amigos</item>
        <item>Estudos</item>
        <item>Religião</item>
        <item>Saúde</item>
        <item>Compras</item>
        <item>Outro</item>

    </string-array>
    <string-array name="array_travel_id">
        <item>0</item> <!-- Valor default -->
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!--Products Array-->
    <string-array name="array_products">

        <item>Selecione um produto..</item> <!-- Valor default -->
        <item>Chocolate</item>
        <item>Skol Beats</item>
        <item>Doritos</item>
        <item>Vinho</item>
        <item>Água</item>

    </string-array>

    <string-array name="array_products_id">

        <item>0</item> <!-- Valor default -->
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>

    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_profile_acitvity">ProfileAcitvity</string>
    <string name="title_activity_alter_password">AlterPasswordActivity</string>
    <string name="dialog_insert_email">Insira seu e-mail</string>
    <string name="title_password_recovery_dialog">Recuperação de senha</string>
    <string name="dialog_action_send">Enviar</string>
    <string name="dialog_action_ok">Ok</string>
    <string name="dialog_action_yes">Sim</string>
    <string name="dialog_action_no">Não</string>
    <string name="dialog_action_cancel">Cancelar</string>

</resources>
