<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fitsSystemWindows="true"
    tools:context="br.com.versalius.checkhotel.activities.LoginActivity">


    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_gradient"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_login_horizontal_margin"
        android:paddingRight="@dimen/activity_login_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/ic_account"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_account"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="#afff" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/btForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="25dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="#3c3b3b" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btLogin"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@color/colorAccent"
                android:elevation="4dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/action_login"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/dont_have_acc"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btSingup"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondary"
                android:elevation="4dp"
                android:text="@string/underlined_singup"
                android:textColor="@android:color/white" />
        </LinearLayout>
        <!--<TextView-->
        <!--android:id="@+id/btSingup"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/singup"-->
        <!--android:textSize="14sp"-->
        <!--android:textColor="@color/colorLink" />-->
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
